Fix /kit reset target 1.16.5