@@ -1,5 +1,6 @@
 package org.trentech.easykits.sql;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.SQLException;
@@ -11,7 +12,7 @@ public abstract class SQLUtils {
 
     public static Connection getConnection() {      
 		try {
-			Driver driver = (Driver) Class.forName("org.trentech.easykits.h2.Driver").newInstance();
+			Driver driver = (Driver) Class.forName("org.trentech.easykits.h2.Driver").getDeclaredConstructor().newInstance();
 	        Properties properties = new Properties();      
 	        Connection connection = driver.connect("jdbc:h2:" + Main.getPlugin().getDataFolder().getAbsolutePath() + "\\data.db;DB_CLOSE_DELAY=-1", properties);
 
@@ -20,7 +21,7 @@ public abstract class SQLUtils {
 	        }
 	        
 	        return connection;
-		} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | SQLException e) {
+		} catch (IllegalArgumentException | InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException | SecurityException | ClassNotFoundException | SQLException e) {
 			e.printStackTrace();
 			return null;
 		}
